fix(ui): reduce button text size to prevent overflow

--- a/app/client/src/style/components/_buttons.scss
+++ b/app/client/src/style/components/_buttons.scss
@@ -6,10 +6,10 @@
 	justify-content: center;
 	width: 145px;
 	height: 28px;
-	margin-top: 3px;
+	margin-top: 2px;
 	margin-bottom: 2px;
 	font-variant: small-caps;
-	font-size: 10.5pt;
+	font-size: 9.5pt;
 	color: #ffeb7a;
 	font-weight: bold;
 	text-decoration: none;
